--- a/android/api/io/scanbot/sdk/ui/view/barcode/IBarcodeCameraView.ViewModel.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/IBarcodeCameraView.ViewModel.html
@@ -406,6 +406,14 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                         </tr>
                                         
                                         <tr id="i22" class="altColor">
+                                            <td class="colFirst"><code>abstract <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#setDecodeStacks1D(Integer)>setDecodeStacks1D</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> decodeStacks1D) </code>
+                                            </th>
+                                            <td class="colLast">Number of stacks to split a 1D barcode crop before extracting scanlines.</td>
+                                        </tr>
+                                        
+                                        <tr id="i23" class="rowColor">
                                             <td class="colFirst"><code>abstract <a href=../../../barcode/ScanbotBarcodeDetector.html>ScanbotBarcodeDetector</a></code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#getScanner()>getScanner</a>() </code>
@@ -413,7 +421,7 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i23" class="rowColor">
+                                        <tr id="i24" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#getCameraOpened()>getCameraOpened</a>() </code>
@@ -421,7 +429,7 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i24" class="altColor">
+                                        <tr id="i25" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#getStopNewFrames()>getStopNewFrames</a>() </code>
@@ -429,7 +437,7 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i25" class="rowColor">
+                                        <tr id="i26" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#getFlash()>getFlash</a>() </code>
@@ -437,7 +445,7 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i26" class="altColor">
+                                        <tr id="i27" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#getAutoSnapEnabled()>getAutoSnapEnabled</a>() </code>
@@ -445,7 +453,7 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i27" class="rowColor">
+                                        <tr id="i28" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=../../../barcode/IBarcodeFilter.html>IBarcodeFilter</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=IBarcodeCameraView.ViewModel.html#getBarcodeFilter()>getBarcodeFilter</a>() </code>
@@ -862,6 +870,21 @@ public interface <span class="typeNameLabel"><a href=IBarcodeCameraView.ViewMode
                                         <h4>setBarcodeFilter</h4>
                                         <pre class="methodSignature"> abstract <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=IBarcodeCameraView.ViewModel.html#setBarcodeFilter(IBarcodeFilter)>setBarcodeFilter</a>(<a href=../../../barcode/IBarcodeFilter.html>IBarcodeFilter</a> barcodeFilter)</pre>
                                         <div class="block"><p>Set the <code>IBarcodeFilter</code> implementation instance to filter accepted scanned barcodes.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="setDecodeStacks1D(Integer)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>setDecodeStacks1D</h4>
+                                        <pre class="methodSignature"> abstract <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=IBarcodeCameraView.ViewModel.html#setDecodeStacks1D(Integer)>setDecodeStacks1D</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> decodeStacks1D)</pre>
+                                        <div class="block"><p>Number of stacks to split a 1D barcode crop before extracting scanlines. For stacked RSS barcodes, this should be set to the numbers of stacks with which the barcode was printed. For other barcodes, the default of 1 is good enough. Setting it higher will slighty increase frame times, improve performance on hard barcodes and possibly increase the number of false positives.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
