--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfigurationParams.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfigurationParams.html
@@ -453,6 +453,12 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                     
                                     <tr class="rowColor">
                                         <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=BarcodeScannerConfigurationParams.html#DECODE_STACKS_1D>DECODE_STACKS_1D</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
+                                    <tr class="altColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
                                                 href="TODO"><a href=BarcodeScannerConfigurationParams.html#BARCODE_SELECTION_OVERLAY_CONFIGURATION>BARCODE_SELECTION_OVERLAY_CONFIGURATION</a></a></span></code></th>
                                         <td class="colLast"></td>
                                     </tr>
