--- a/android/api/io/scanbot/sdk/ui/view/barcode/configuration/json/BarcodeJsonExtensionsKt.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/configuration/json/BarcodeJsonExtensionsKt.html
@@ -278,6 +278,14 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                             <td class="colLast">Converts JSON-compatible object to SDK object</td>
                                         </tr>
                                         
+                                        <tr id="i6" class="altColor">
+                                            <td class="colFirst"><code>final static &lt;Error class: unknown class&gt;</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self) </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -401,12 +409,27 @@ public final class <span class="typeNameLabel"><a href=BarcodeJsonExtensionsKt.h
                                     <!--   -->
                                 </a>
                                 <ul class=
-                                              "blockListLast"
+                                              "blockList"
                                           >
                                     <li class="blockList">
                                         <h4>toSdk</h4>
                                         <pre class="methodSignature"> final static &lt;Error class: unknown class&gt; <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
                                         <div class="block"><p>Converts JSON-compatible object to SDK object</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="toSdk(&lt;Error class: unknown class&gt;)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>toSdk</h4>
+                                        <pre class="methodSignature"> final static &lt;Error class: unknown class&gt; <a href=BarcodeJsonExtensionsKt.html#toSdk(<Error class: unknown class>)>toSdk</a>(&lt;Error class: unknown class&gt; $self)</pre>
+                                        <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
