Android: Updated docs for Barcode SDK 3.5.0

--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/package-summary.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/package-summary.html
@@ -151,7 +151,7 @@ var pathtoroot = "../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.BarcodeScanned.html>BarcodeScanned</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.BarcodeSelected.html>BarcodeSelected</a></th><td class="colLast"></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.BarcodesSelected.html>BarcodesSelected</a></th><td class="colLast"></td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BarcodeNavigationEvents.html>BarcodeNavigationEvents</a></th><td class="colLast">Class that describe all navigation evens for barcode scanner rtu-ui</td></tr>
 
