--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/InternalBatchBarcodeScannerActivity.Companion.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/InternalBatchBarcodeScannerActivity.Companion.html
@@ -1,25 +1,25 @@
 <!DOCTYPE HTML>
 <!-- NewPage -->
 <html lang="en"><head>
-    <title>WorkflowsConfigurationException </title>
+    <title>Companion </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="dc.created" content="2020-03-25">
-    <link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../dokka-javadoc-stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../../../jquery/jquery-ui.css" title="Style">
-    <script type="text/javascript" src="../../../../../../jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
-    <script type="text/javascript" src="../../../../../../jquery/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../../../../stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../../dokka-javadoc-stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../../jquery/jquery-ui.css" title="Style">
+    <script type="text/javascript" src="../../../../../../../jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../../jquery/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="../../../../../../search.js"></script>
-    <script async type="text/javascript" src="../../../../../../module-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../package-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../type-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../member-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../../../tag-search-index.js"></script>
+    <script type="text/javascript" src="../../../../../../../search.js"></script>
+    <script async type="text/javascript" src="../../../../../../../module-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../package-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../type-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../member-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../../tag-search-index.js"></script>
 </head><body>
 <script type="text/javascript">
-var pathtoroot = "../../../../../../";
+var pathtoroot = "../../../../../../../";
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -36,19 +36,18 @@ var pathtoroot = "../../../../../../";
                     <!--   -->
                 </a>
                 <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
-    <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
             <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 
 
@@ -82,7 +81,7 @@ var pathtoroot = "../../../../../../";
 <main role="main">
     <div class="header">
         <div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html"></a></div>
-        <h2 title="Class WorkflowsConfigurationException" class="title">Class WorkflowsConfigurationException</h2>
+        <h2 title="Object InternalBatchBarcodeScannerActivity.Companion" class="title">Object InternalBatchBarcodeScannerActivity.Companion</h2>
     </div>
     <div class="contentContainer">
         <!-- <ul class="inheritance">
@@ -101,19 +100,16 @@ var pathtoroot = "../../../../../../";
                         <dt>All Implemented Interfaces:</dt>
                         <dd>
                             
-                            <code>java.io.Serializable</code>
-                            
-                            
                         </dd>
                     </dl>
                     
                     <hr>
                     <pre class="wrap-overflow">
 
-public final class <span class="typeNameLabel"><a href=WorkflowsConfigurationException.html>WorkflowsConfigurationException</a></span>
-extends <a href=https://developer.android.com/reference/kotlin/java/io/IOException.html>IOException</a>
+public class <span class="typeNameLabel"><a href=InternalBatchBarcodeScannerActivity.Companion.html>InternalBatchBarcodeScannerActivity.Companion</a></span>
+
                     </pre>
-                    <div class="block"><p>Thrown when Ready to use component has invalid configuration params</p></div>
+                    <div class="block"></div>
                 </li>
             </ul>
         </div>
@@ -160,6 +156,18 @@ extends <a href=https://developer.android.com/reference/kotlin/java/io/IOExcepti
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
                                         
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=InternalBatchBarcodeScannerActivity.Companion.html#DISABLED_SUBMIT_ALPHA>DISABLED_SUBMIT_ALPHA</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr class="rowColor">
+                                            <td class="colFirst"><code>public final static <a href=InternalBatchBarcodeScannerActivity.Companion.html>InternalBatchBarcodeScannerActivity.Companion</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=InternalBatchBarcodeScannerActivity.Companion.html#INSTANCE>INSTANCE</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -183,12 +191,6 @@ extends <a href=https://developer.android.com/reference/kotlin/java/io/IOExcepti
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
 
-                                        
-                                            <tr class="altColor">
-                                                <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#WorkflowsConfigurationException(String)">WorkflowsConfigurationException</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> message)</code></th>
-                                                <td class="colLast"></td>
-                                            </tr>
                                         
 
                                         </tbody>
@@ -239,6 +241,22 @@ extends <a href=https://developer.android.com/reference/kotlin/java/io/IOExcepti
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
                                         
+                                        <tr id="i0" class="altColor">
+                                            <td class="colFirst"><code>final &lt;A extends <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html>Any</a>&gt; <a href=https://developer.android.com/reference/kotlin/android/content/Intent.html>Intent</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=InternalBatchBarcodeScannerActivity.Companion.html#newIntentInternal(Context,Class,BatchBarcodeScannerConfiguration)>newIntentInternal</a>(<a href=https://developer.android.com/reference/kotlin/android/content/Context.html>Context</a> context, <a href=https://developer.android.com/reference/kotlin/java/lang/Class.html>Class</a>&lt;<a href=InternalBatchBarcodeScannerActivity.Companion.html#newIntentInternal(Context,Class,BatchBarcodeScannerConfiguration)>A</a>&gt; activityClass, <a href=configuration/BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a> scannerConfiguration) </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i1" class="rowColor">
+                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=InternalBatchBarcodeScannerActivity.Companion.html#getDISABLED_SUBMIT_ALPHA()>getDISABLED_SUBMIT_ALPHA</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -270,16 +288,6 @@ extends <a href=https://developer.android.com/reference/kotlin/java/io/IOExcepti
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="WorkflowsConfigurationException(String)"></a>
-                                <ul class="blockList">
-                                    <li class="blockList">
-                                        <h4>WorkflowsConfigurationException</h4>
-                                        <pre>WorkflowsConfigurationException(<a href=https://developer.android.com/reference/kotlin/java/lang/String.html>String</a> message)</pre>
-                                        <div class="block"></div>
-                                        
-                                    </li>
-                                </ul>
-                                
                             </li>
                         </ul>
                     </section>
@@ -292,6 +300,36 @@ extends <a href=https://developer.android.com/reference/kotlin/java/io/IOExcepti
                                 <!--   -->
                             </a>
                                 <h3>Method Detail</h3>
+                                
+                                <a id="newIntentInternal(Context,Class,BatchBarcodeScannerConfiguration)">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>newIntentInternal</h4>
+                                        <pre class="methodSignature"> final &lt;A extends <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-any/index.html>Any</a>&gt; <a href=https://developer.android.com/reference/kotlin/android/content/Intent.html>Intent</a> <a href=InternalBatchBarcodeScannerActivity.Companion.html#newIntentInternal(Context,Class,BatchBarcodeScannerConfiguration)>newIntentInternal</a>(<a href=https://developer.android.com/reference/kotlin/android/content/Context.html>Context</a> context, <a href=https://developer.android.com/reference/kotlin/java/lang/Class.html>Class</a>&lt;<a href=InternalBatchBarcodeScannerActivity.Companion.html#newIntentInternal(Context,Class,BatchBarcodeScannerConfiguration)>A</a>&gt; activityClass, <a href=configuration/BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a> scannerConfiguration)</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getDISABLED_SUBMIT_ALPHA()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getDISABLED_SUBMIT_ALPHA</h4>
+                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> <a href=InternalBatchBarcodeScannerActivity.Companion.html#getDISABLED_SUBMIT_ALPHA()>getDISABLED_SUBMIT_ALPHA</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
                                 
                             </li>
                         </ul>
@@ -314,22 +352,21 @@ extends <a href=https://developer.android.com/reference/kotlin/java/io/IOExcepti
                 <!--   -->
             </a>
             <ul class="navList" title="Navigation">
-    <li><a href="../../../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
-    <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
         <a id="skip.navbar.bottom">
             <!--   -->
         </a>
         <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 <div>
 <script type="text/javascript"><!--
