--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/package-summary.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/configuration/package-summary.html
@@ -100,14 +100,16 @@ var pathtoroot = "../../../../../../../../";
     <div class="typeSummary">
 
 <table>
-<caption><span>Object Summary</span><span class="tabEnd">&nbsp;</span></caption>
+<caption><span>Class Summary</span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
-<th class="colFirst" scope="col">Object</th>
+<th class="colFirst" scope="col">Class</th>
 <th class="colLast" scope="col">Description</th>
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfiguration.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeCameraConfigurationHelper.html>BatchBarcodeCameraConfigurationHelper</a></th><td class="colLast">Encapsulates the logic of work with configuration for barcode camera view.</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a></th><td class="colLast">Class which is used to configure io.scanbot.sdk.ui.view.barcode.batch.</td></tr>
 </tbody>
 </table>
 
@@ -124,14 +126,14 @@ var pathtoroot = "../../../../../../../../";
     <div class="typeSummary">
 
 <table>
-<caption><span>Class Summary</span><span class="tabEnd">&nbsp;</span></caption>
+<caption><span>Object Summary</span><span class="tabEnd">&nbsp;</span></caption>
 <tr>
-<th class="colFirst" scope="col">Class</th>
+<th class="colFirst" scope="col">Object</th>
 <th class="colLast" scope="col">Description</th>
 </tr>
 <tbody>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfiguration.html>BatchBarcodeScannerConfiguration</a></th><td class="colLast">Class which is used to configure io.scanbot.sdk.ui.view.barcode.batch.</td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeScannerConfiguration.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
