--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/package-summary.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/batch/package-summary.html
@@ -144,6 +144,8 @@ var pathtoroot = "../../../../../../../";
 <tbody>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=BatchBarcodeListView.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=InternalBatchBarcodeScannerActivity.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
