--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfiguration.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerConfiguration.html
@@ -108,7 +108,7 @@ var pathtoroot = "../../../../../../../";
                     <pre class="wrap-overflow">
 
 public final class <span class="typeNameLabel"><a href=BarcodeScannerConfiguration.html>BarcodeScannerConfiguration</a></span>
-extends <a href=CommonBarcodeScannerConfiguration.html>CommonBarcodeScannerConfiguration</a>
+extends <a href=../common/configuration/CommonBarcodeScannerConfiguration.html>CommonBarcodeScannerConfiguration</a>
                     </pre>
                     <div class="block"><p>Class which is used to configure io.scanbot.sdk.ui.view.barcode.BarcodeScannerActivity Contains settings indicating views Behaviour, Texts and Appearance</p></div>
                 </li>
