Android: Updated api documentation for Scanbot SDK to 2.1.0

--- a/android/api/io/scanbot/sdk/ui/view/camera/ICameraView.ViewModel.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/ICameraView.ViewModel.html
@@ -398,6 +398,14 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                         </tr>
                                         
                                         <tr id="i21" class="rowColor">
+                                            <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../AspectRatio.html>AspectRatio</a>&gt;&gt;</code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getRequiredAspectRatio()>getRequiredAspectRatio</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i22" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getAutoSnapping()>getAutoSnapping</a>() </code>
@@ -405,7 +413,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i22" class="altColor">
+                                        <tr id="i23" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=../../../core/contourdetector/DetectionStatus.html>DetectionStatus</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getDetectionStatus()>getDetectionStatus</a>() </code>
@@ -413,7 +421,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i23" class="rowColor">
+                                        <tr id="i24" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getShutterSoundEnabled()>getShutterSoundEnabled</a>() </code>
@@ -421,7 +429,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i24" class="altColor">
+                                        <tr id="i25" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getPictureProcessing()>getPictureProcessing</a>() </code>
@@ -429,7 +437,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i25" class="rowColor">
+                                        <tr id="i26" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getMultiPage()>getMultiPage</a>() </code>
@@ -437,7 +445,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i26" class="altColor">
+                                        <tr id="i27" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getIgnoreBadAspectRatio()>getIgnoreBadAspectRatio</a>() </code>
@@ -445,7 +453,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i27" class="rowColor">
+                                        <tr id="i28" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getSnappedPagesCount()>getSnappedPagesCount</a>() </code>
@@ -453,7 +461,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i28" class="altColor">
+                                        <tr id="i29" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=../../../process/ImageFilterType.html>ImageFilterType</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getImageFilterType()>getImageFilterType</a>() </code>
@@ -461,7 +469,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i29" class="rowColor">
+                                        <tr id="i30" class="altColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Float.html>Float</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getAutosnapSensitivity()>getAutosnapSensitivity</a>() </code>
@@ -469,7 +477,7 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr id="i30" class="altColor">
+                                        <tr id="i31" class="rowColor">
                                             <td class="colFirst"><code>abstract &lt;Error class: unknown class&gt;&lt;<a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a>&gt;</code>
                                             </td>
                                             <th class="colSecond" scope="row"><code><a href=ICameraView.ViewModel.html#getSnapEvent()>getSnapEvent</a>() </code>
@@ -843,6 +851,21 @@ public interface <span class="typeNameLabel"><a href=ICameraView.ViewModel.html>
                                     <li class="blockList">
                                         <h4>getForceUserGuidance</h4>
                                         <pre class="methodSignature"> abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a>&gt; <a href=ICameraView.ViewModel.html#getForceUserGuidance()>getForceUserGuidance</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getRequiredAspectRatio()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getRequiredAspectRatio</h4>
+                                        <pre class="methodSignature"> abstract &lt;Error class: unknown class&gt;&lt;<a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../AspectRatio.html>AspectRatio</a>&gt;&gt; <a href=ICameraView.ViewModel.html#getRequiredAspectRatio()>getRequiredAspectRatio</a>()</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
