--- a/android/api/io/scanbot/sdk/ui/view/camera/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/package-summary.html
@@ -113,7 +113,15 @@ var pathtoroot = "../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.html>DocumentScannerActivity</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BaseDocumentScannerActivity.html>BaseDocumentScannerActivity</a></th><td class="colLast"><a href=DocumentScannerActivity.html>DocumentScannerActivity</a> parent that handles view model initialisation and configuration parsing</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.Result.html>Result</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.ResultContract.html>ResultContract</a></th><td class="colLast">Predefined AndroidX Activity Result API contract, ScanbotSDK-flavored.</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.html>FinderDocumentScannerActivity</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=BaseDocumentScannerActivity.html>BaseDocumentScannerActivity</a></th><td class="colLast"><a href=DocumentScannerActivity.html>DocumentScannerActivity</a> parent that handles view model initialisation and configuration parsing</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=BaseFinderDocumentScannerActivity.html>BaseFinderDocumentScannerActivity</a></th><td class="colLast"><a href=FinderDocumentScannerActivity.html>FinderDocumentScannerActivity</a> parent that handles view model initialisation and configuration parsing</td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerCameraView.html>DocumentScannerCameraView</a></th><td class="colLast">Represents camera view.</td></tr>
 
@@ -122,6 +130,8 @@ var pathtoroot = "../../../../../../";
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerNavigationEvent.CloseSnapping.html>CloseSnapping</a></th><td class="colLast"></td></tr>
 
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerNavigationEvent.html>DocumentScannerNavigationEvent</a></th><td class="colLast">Class that describe all navigation evens for document scanner rtu-ui beside permission events</td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerCameraView.html>FinderDocumentScannerCameraView</a></th><td class="colLast">Represents camera view.</td></tr>
 </tbody>
 </table>
 
@@ -147,9 +157,13 @@ var pathtoroot = "../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerCameraView.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerCameraViewModel.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerCameraView.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerCameraViewModel.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerCameraView.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
