--- a/android/api/io/scanbot/sdk/ui/view/barcode/common/configuration/CommonBarcodeScannerConfiguration.html
+++ b/android/api/io/scanbot/sdk/ui/view/barcode/common/configuration/CommonBarcodeScannerConfiguration.html
@@ -341,7 +341,7 @@ public class <span class="typeNameLabel"><a href=CommonBarcodeScannerConfigurati
                                         <tr id="i12" class="altColor">
                                             <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=CommonBarcodeScannerConfiguration.html#setFinderAspectRatio(FinderAspectRatio)>setFinderAspectRatio</a>(<a href=../../../../camera/FinderAspectRatio.html>FinderAspectRatio</a> finderAspectRatio) </code>
+                                            <th class="colSecond" scope="row"><code><a href=CommonBarcodeScannerConfiguration.html#setFinderAspectRatio(AspectRatio)>setFinderAspectRatio</a>(<a href=../../../../../AspectRatio.html>AspectRatio</a> finderAspectRatio) </code>
                                             </th>
                                             <td class="colLast">Aspect ratio of the finder window.</td>
                                         </tr>
@@ -741,7 +741,7 @@ public class <span class="typeNameLabel"><a href=CommonBarcodeScannerConfigurati
                                     </li>
                                 </ul>
                                 
-                                <a id="setFinderAspectRatio(FinderAspectRatio)">
+                                <a id="setFinderAspectRatio(AspectRatio)">
                                     <!--   -->
                                 </a>
                                 <ul class=
@@ -749,7 +749,7 @@ public class <span class="typeNameLabel"><a href=CommonBarcodeScannerConfigurati
                                           >
                                     <li class="blockList">
                                         <h4>setFinderAspectRatio</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CommonBarcodeScannerConfiguration.html#setFinderAspectRatio(FinderAspectRatio)>setFinderAspectRatio</a>(<a href=../../../../camera/FinderAspectRatio.html>FinderAspectRatio</a> finderAspectRatio)</pre>
+                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CommonBarcodeScannerConfiguration.html#setFinderAspectRatio(AspectRatio)>setFinderAspectRatio</a>(<a href=../../../../../AspectRatio.html>AspectRatio</a> finderAspectRatio)</pre>
                                         <div class="block"><p>Aspect ratio of the finder window.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
