--- a/android/api/io/scanbot/sdk/ui/view/camera/configuration/DocumentScannerConfiguration.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/configuration/DocumentScannerConfiguration.html
@@ -748,6 +748,14 @@ public final class <span class="typeNameLabel"><a href=DocumentScannerConfigurat
                                         <tr id="i62" class="altColor">
                                             <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerConfiguration.html#setRequiredAspectRatios(TypeAliased(typeAlias=GenericTypeConstructor(dri=kotlin.collections/ArrayList///PointingToDeclaration/, projections=[], presentableName=null, extra=PropertyContainer(map={})), inner=GenericTypeConstructor(dri=java.util/ArrayList///PointingToDeclaration/, projections=[], presentableName=null, extra=PropertyContainer(map={})), extra=PropertyContainer(map={})))>setRequiredAspectRatios</a>(<a href=https://developer.android.com/reference/kotlin/java/util/ArrayList.html>ArrayList</a>&lt;<a href=../../../../AspectRatio.html>AspectRatio</a>&gt; requiredAspectRatios) </code>
+                                            </th>
+                                            <td class="colLast">Allowed aspect ratios of the document.</td>
+                                        </tr>
+                                        
+                                        <tr id="i63" class="rowColor">
+                                            <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
+                                            </td>
                                             <th class="colSecond" scope="row"><code><a href=DocumentScannerConfiguration.html#modifyFromJsonConfiguration(<Error class: unknown class>)>modifyFromJsonConfiguration</a>(&lt;Error class: unknown class&gt; jsonConfig) </code>
                                             </th>
                                             <td class="colLast">Modifies a screen configuration object with settings from a JSON configuration object</td>
@@ -1745,6 +1753,21 @@ This value is always {@code true} for pre-JELLY_BEAN_MR1</div>
                                         <h4>setForceUserGuidance</h4>
                                         <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=DocumentScannerConfiguration.html#setForceUserGuidance(Boolean)>setForceUserGuidance</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> enabled)</pre>
                                         <div class="block"><p>Force of showing PolygonView and user guiding when autosnapping is disabled</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="setRequiredAspectRatios(TypeAliased(typeAlias=GenericTypeConstructor(dri=kotlin.collections/ArrayList///PointingToDeclaration/, projections=[], presentableName=null, extra=PropertyContainer(map={})), inner=GenericTypeConstructor(dri=java.util/ArrayList///PointingToDeclaration/, projections=[], presentableName=null, extra=PropertyContainer(map={})), extra=PropertyContainer(map={})))">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>setRequiredAspectRatios</h4>
+                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=DocumentScannerConfiguration.html#setRequiredAspectRatios(TypeAliased(typeAlias=GenericTypeConstructor(dri=kotlin.collections/ArrayList///PointingToDeclaration/, projections=[], presentableName=null, extra=PropertyContainer(map={})), inner=GenericTypeConstructor(dri=java.util/ArrayList///PointingToDeclaration/, projections=[], presentableName=null, extra=PropertyContainer(map={})), extra=PropertyContainer(map={})))>setRequiredAspectRatios</a>(<a href=https://developer.android.com/reference/kotlin/java/util/ArrayList.html>ArrayList</a>&lt;<a href=../../../../AspectRatio.html>AspectRatio</a>&gt; requiredAspectRatios)</pre>
+                                        <div class="block"><p>Allowed aspect ratios of the document.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
