--- a/android/api/io/scanbot/sdk/ui/view/camera/configuration/DocumentScannerConfigurationParams.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/configuration/DocumentScannerConfigurationParams.html
@@ -583,6 +583,12 @@ extends <a href=https://developer.android.com/reference/kotlin/java/lang/Enum.ht
                                         <td class="colLast"></td>
                                     </tr>
                                     
+                                    <tr class="rowColor">
+                                        <th class="colFirst" scope="row"><code><span class="memberNameLink"><a
+                                                href="TODO"><a href=DocumentScannerConfigurationParams.html#REQUIRED_ASPECT_RATIOS>REQUIRED_ASPECT_RATIOS</a></a></span></code></th>
+                                        <td class="colLast"></td>
+                                    </tr>
+                                    
                                 </table>
                             </li>
                         </ul>
