--- a/android/api/io/scanbot/sdk/ui/view/camera/configuration/json/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/configuration/json/package-summary.html
@@ -108,6 +108,10 @@ var pathtoroot = "../../../../../../../../";
 <tbody>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentJsonExtensionsKt.html>DocumentJsonExtensionsKt</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentJsonExtensionsKt.html>FinderDocumentJsonExtensionsKt</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=ImageFilterTypeExtensionsKt.html>ImageFilterTypeExtensionsKt</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
