--- a/android/api/io/scanbot/sdk/ui/view/camera/configuration/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/configuration/package-summary.html
@@ -112,6 +112,12 @@ var pathtoroot = "../../../../../../../";
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerConfiguration.html>DocumentScannerConfiguration</a></th><td class="colLast">Class which is used to configure <a href=../DocumentScannerActivity.html>io.scanbot.sdk.ui.view.camera.DocumentScannerActivity</a> Contains settings indicating views Behaviour, Texts and Appearance</td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerConfigurationHelper.html>DocumentScannerConfigurationHelper</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerAccessibilityConfiguration.html>FinderDocumentScannerAccessibilityConfiguration</a></th><td class="colLast">Class to wrap all the strings for Accessibility labels for widgets on the Document scanner screen</td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerConfiguration.html>FinderDocumentScannerConfiguration</a></th><td class="colLast">Class which is used to configure <a href=../DocumentScannerActivity.html>io.scanbot.sdk.ui.view.camera.DocumentScannerActivity</a> Contains settings indicating views Behaviour, Texts and Appearance</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerConfigurationHelper.html>FinderDocumentScannerConfigurationHelper</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
@@ -136,6 +142,8 @@ var pathtoroot = "../../../../../../../";
 <tbody>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerConfiguration.Companion.html>Companion</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerConfiguration.Companion.html>Companion</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
@@ -160,6 +168,8 @@ var pathtoroot = "../../../../../../../";
 <tbody>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerConfigurationParams.html>DocumentScannerConfigurationParams</a></th><td class="colLast">Class containing all the keys which are used to configure CameraView in default UI</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerConfigurationParams.html>FinderDocumentScannerConfigurationParams</a></th><td class="colLast">Class containing all the keys which are used to configure CameraView in default UI</td></tr>
 </tbody>
 </table>
 
