--- a/android/api/io/scanbot/sdk/ui/view/check/configuration/CheckRecognizerConfiguration.html
+++ b/android/api/io/scanbot/sdk/ui/view/check/configuration/CheckRecognizerConfiguration.html
@@ -340,7 +340,7 @@ public final class <span class="typeNameLabel"><a href=CheckRecognizerConfigurat
                                         <tr id="i11" class="rowColor">
                                             <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=CheckRecognizerConfiguration.html#setFinderAspectRatio(FinderAspectRatio)>setFinderAspectRatio</a>(<a href=../../../camera/FinderAspectRatio.html>FinderAspectRatio</a> finderAspectRatio) </code>
+                                            <th class="colSecond" scope="row"><code><a href=CheckRecognizerConfiguration.html#setFinderAspectRatio(AspectRatio)>setFinderAspectRatio</a>(<a href=../../../../AspectRatio.html>AspectRatio</a> finderAspectRatio) </code>
                                             </th>
                                             <td class="colLast">Aspect ratio of the finder window.</td>
                                         </tr>
@@ -662,7 +662,7 @@ public final class <span class="typeNameLabel"><a href=CheckRecognizerConfigurat
                                     </li>
                                 </ul>
                                 
-                                <a id="setFinderAspectRatio(FinderAspectRatio)">
+                                <a id="setFinderAspectRatio(AspectRatio)">
                                     <!--   -->
                                 </a>
                                 <ul class=
@@ -670,7 +670,7 @@ public final class <span class="typeNameLabel"><a href=CheckRecognizerConfigurat
                                           >
                                     <li class="blockList">
                                         <h4>setFinderAspectRatio</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CheckRecognizerConfiguration.html#setFinderAspectRatio(FinderAspectRatio)>setFinderAspectRatio</a>(<a href=../../../camera/FinderAspectRatio.html>FinderAspectRatio</a> finderAspectRatio)</pre>
+                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=CheckRecognizerConfiguration.html#setFinderAspectRatio(AspectRatio)>setFinderAspectRatio</a>(<a href=../../../../AspectRatio.html>AspectRatio</a> finderAspectRatio)</pre>
                                         <div class="block"><p>Aspect ratio of the finder window.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
