--- a/android/api/io/scanbot/sdk/ui/view/mrz/configuration/MRZScannerConfiguration.html
+++ b/android/api/io/scanbot/sdk/ui/view/mrz/configuration/MRZScannerConfiguration.html
@@ -324,7 +324,7 @@ public final class <span class="typeNameLabel"><a href=MRZScannerConfiguration.h
                                         <tr id="i9" class="rowColor">
                                             <td class="colFirst"><code>final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=MRZScannerConfiguration.html#setFinderAspectRatio(FinderAspectRatio)>setFinderAspectRatio</a>(<a href=../../../camera/FinderAspectRatio.html>FinderAspectRatio</a> finderAspectRatio) </code>
+                                            <th class="colSecond" scope="row"><code><a href=MRZScannerConfiguration.html#setFinderAspectRatio(AspectRatio)>setFinderAspectRatio</a>(<a href=../../../../AspectRatio.html>AspectRatio</a> finderAspectRatio) </code>
                                             </th>
                                             <td class="colLast">Aspect ratio of the finder window.</td>
                                         </tr>
@@ -598,7 +598,7 @@ public final class <span class="typeNameLabel"><a href=MRZScannerConfiguration.h
                                     </li>
                                 </ul>
                                 
-                                <a id="setFinderAspectRatio(FinderAspectRatio)">
+                                <a id="setFinderAspectRatio(AspectRatio)">
                                     <!--   -->
                                 </a>
                                 <ul class=
@@ -606,7 +606,7 @@ public final class <span class="typeNameLabel"><a href=MRZScannerConfiguration.h
                                           >
                                     <li class="blockList">
                                         <h4>setFinderAspectRatio</h4>
-                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=MRZScannerConfiguration.html#setFinderAspectRatio(FinderAspectRatio)>setFinderAspectRatio</a>(<a href=../../../camera/FinderAspectRatio.html>FinderAspectRatio</a> finderAspectRatio)</pre>
+                                        <pre class="methodSignature"> final <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=MRZScannerConfiguration.html#setFinderAspectRatio(AspectRatio)>setFinderAspectRatio</a>(<a href=../../../../AspectRatio.html>AspectRatio</a> finderAspectRatio)</pre>
                                         <div class="block"><p>Aspect ratio of the finder window.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
